# bluerush

./: .gitignore  Cargo.toml  Claude.md  MANUAL.md  PROGRESS.md  README.md  TODO.md  llm_discovery.md
.claude/: settings.local.json
.claude/commands/: learn.md
.github/workflows/: build.yml  release.yml
docs/superpowers/plans/: 2026-03-20-coastal-environment.md
docs/superpowers/specs/: 2026-03-20-coastal-environment-design.md
levels/: base.json  coastal-bowl.json  harbour-canyon.json  harbour-classic.json  harbour-inlet.json  harbour-jetty.json
src/: camera.rs  config.rs  grid.rs  levels.rs  main.rs  persistence.rs  render.rs  simulation.rs  textures.rs  ui.rs  undo.rs
