[package]
name = "BlueRush"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

# Enable optimizations for dependencies in debug builds (keeps game fast while iterating)
[profile.dev.package."*"]
opt-level = 3

# Keep your own code unoptimized for fast incremental compile + good debug info
[profile.dev]
opt-level = 0
